Fix: Fixed Screenshot driver, Added Logging via CodeUtilities